# AlphaPathMoves

./: .gitignore  CMakeLists.txt  README.md
Documentation/: apm_documentation.bib  apm_documentation.tex  images.pptx
Headers/: AlphaPathMoves.h  BasicGraph.h  EuclideanDT.h  GirdNeighboursGenerator.h  MatlabUtils.h  MaxflowSolver.h  TS_Logger.h  Utilities.h
Headers/BK/: BK_instances.inc  block.h  graph.h
Headers/CUDA/: HedgehogConstraints.cuh  MarginEdgesCuda.cuh  sobelFilter.cuh
Headers/IBFS/: ibfs.h
Headers/QPBO/: QPBO.h  QPBO_instances.inc  block.h
Sources/: TS_Logger.cpp  main.cpp
Sources/BK/: graph.cpp  maxflow.cpp
Sources/CUDA/: HedgehogConstraints.cu  MarginEdgesCuda.cu  sobelFilter.cu
Sources/QPBO/: QPBO.cpp  QPBO_extra.cpp  QPBO_maxflow.cpp  QPBO_postprocessing.cpp
